# hackerrank-orchestrate-may26

./: .env.example  .gitignore  README.md  SUBMISSION_DESCRIPTION.md  instructions.txt  log.txt  main.py  output.csv  pyproject.toml  pyrightconfig.json  requirements.txt  run.bat  run.sh  test_gemini.py  triage.py
.claude/: settings.json
code/: .env.example  CHANGES_README.md  DATA_STRUCTURE.md  README.md  README_LLM_CALLS.md  __init__.py  _smoke_probe.py  agent.py  anchor.py  aria_agent.py  benchmark.py  brain.py  build_index.py  check.py  classifier.py  config.py  config.yaml  corpus.py  corpus_builder.py  corpus_index.py  corpus_loader.py  decision.py  demo.py  engine.py  escalation.py  escalator.py  eval.py  gate.py  gatekeeper.py  generator.py  indexer.py  io_csv.py  llm.py  llm_client.py  loader.py  logger.py  main.py  model_client.py  models.py  output.csv  (+31 more)
docs/: Architecture.md  PRD.md  ProblemAnalysis.md  Understanding.md  executionplan.md
local_store/: visa.json
scratch/: test_gemini_new.py
support_tickets/: .~lock.output.csv#  baseline_output_backup.csv  challenge_output.csv  challenge_output2.csv  challenge_results.csv  challenge_tickets.csv  edge_cases_st.csv  mock_output-1.csv  mock_output.csv  mock_support_tickets.csv  output.csv  output.demo.csv  output.smoke.csv  output_after_patch.csv  output_sample.csv  output_v2.csv  sample_output.csv  support_tickets.csv
support_triage/: README.md
support_triage_upload/: triage_agent.py
tests/: _path.py  test_agent.py  test_config.py  test_corpus.py  test_defaults.py  test_io.py  test_validation.py
(+90 files in other folders)
